# SRTCN_Protokol

./: CMakeLists.txt  readme.md
externa_libs/: hmac_sha256.c  readme.md  sha256.c
include/: ack_layer.h  crypto.h  endian_utils.h  message.h  platform.h  secure_codec.h  srtcn.h
src/: crypto.c  endian_utils.c  message.c  secure_codec.c  srtcn.c
src/platform/: platform_posix.c  platform_windows.c
test/: pub.c  sub.c
